apply plugin: 'java-library'
// apply plugin: 'maven'


buildscript {
  repositories {
    mavenCentral()
    //mavenLocal()
  }
  dependencies {
    classpath 'com.vanniktech:gradle-maven-publish-plugin:0.28.0' //for publishing
  }
}

java {
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
  implementation 'org.json:json:20250107'
  implementation 'com.google.code.findbugs:jsr305:3.0.2'

  testImplementation(platform("org.mockito:mockito-bom:5.12.0"))
  testImplementation("org.mockito:mockito-core")
  testRuntimeOnly("net.bytebuddy:byte-buddy-agent")
  testImplementation("junit:junit:4.13.2")
  //testImplementation 'com.squareup.okhttp3:mockwebserver:3.7.0'
}

apply plugin: "com.vanniktech.maven.publish"
